--- a/Ejercicios/index.html
+++ b/Ejercicios/index.html
@@ -13,7 +13,8 @@
 
         <nav>
             <ul>
-                <li><a href="./Views/01.html">Ejercicio 01</a></li>
+                <li><a href="./Views/js-01.html">Ejercicio 01</a></li>
+                <li><a href="./Views/js-02.html">Ejercicio 02</a></li>
             </ul>
         </nav>
         
